[gd_scene load_steps=4 format=3 uid="uid://8vdsc2ommrfn"]

[ext_resource type="Script" uid="uid://c8n8c31j5ot2u" path="res://components/loop_chip.gd" id="1_6qf8f"]
[ext_resource type="Texture2D" uid="uid://cwguhnm6ysoaf" path="res://assets/1px.png" id="1_l84g7"]
[ext_resource type="Texture2D" uid="uid://dcren3eiiyi0x" path="res://assets/arrow.svg" id="3_52vi7"]

[node name="LoopChip" type="Node2D"]
script = ExtResource("1_6qf8f")

[node name="1Px4" type="Sprite2D" parent="."]
modulate = Color(0.438619, 0.576132, 0.442014, 1)
position = Vector2(-2.38419e-06, -9.53674e-07)
scale = Vector2(160, 48)
texture = ExtResource("1_l84g7")

[node name="1Px2" type="Sprite2D" parent="."]
modulate = Color(0.266016, 0.489712, 0.393053, 1)
position = Vector2(-56, 1.19209e-07)
scale = Vector2(52, 52)
texture = ExtResource("1_l84g7")

[node name="1Px" type="Sprite2D" parent="."]
modulate = Color(0.232146, 0.378601, 0.311702, 1)
scale = Vector2(52, 52)
texture = ExtResource("1_l84g7")

[node name="1Px3" type="Sprite2D" parent="."]
modulate = Color(0.15521, 0.26749, 0.224519, 1)
position = Vector2(56, 0)
scale = Vector2(52, 52)
texture = ExtResource("1_l84g7")

[node name="LoopName" type="Label" parent="."]
offset_left = -80.0
offset_top = -24.0
offset_right = -32.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 28
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoopCount" type="Label" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 20
text = "x1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLoop" type="Label" parent="."]
offset_left = 48.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 16
text = "B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoopChipButton" type="Button" parent="."]
offset_left = -84.0
offset_top = -28.0
offset_right = 84.0
offset_bottom = 28.0
flat = true

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(47.5753, 0)
scale = Vector2(0.138427, 0.148148)
texture = ExtResource("3_52vi7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="gui_input" from="LoopChipButton" to="." method="_on_loop_chip_button_gui_input"]
